Building mostly, silly me

--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,36 @@
 name    = Task-Spark-Form
-version = 0.01
+version = 0.00
 license = Perl_5
 author  = Kent Fredric <kentnl@cpan.org>
 copyright_holder = Pedigree Consulting
+abstract = All you need to start with Spark::Form
 
-[@Classic]
+[BumpVersion]
+[AllFiles]
+[PruneCruft]
+
+[MetaYAML]
+[MetaResources]
+repository = git://github.com/kentfredric/Task-Spark-Form.git
+
+[License]
+[Readme]
+
+[InstallDirs]
+
+
+[PkgVersion]
+[PodPurler]
+
+[ModuleBuild]
+
+[Manifest]
+[ManifestSkip]
 
 [Prereq]
 Spark::Form = 0.1
 SparkX::Form::BasicFields = 0.01
 SparkX::Form::BasicPrinters = 0.1
 SparkX::Form::BasicValidators = 0.01
+
+
