Changelog works , etc

--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,7 @@ repository = git://github.com/kentfredric/Task-Spark-Form.git
 [License]
 [Readme]
 
-[InstallDirs]
-
+;[InstallDirs]
 
 [PkgVersion]
 [PodPurler]
@@ -26,6 +25,8 @@ repository = git://github.com/kentfredric/Task-Spark-Form.git
 
 [Manifest]
 [ManifestSkip]
+
+[NextRelease]
 
 [Prereq]
 Spark::Form = 0.1
