--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,10 @@
 name    = Task-Spark-Form
-version = 0.00
+version = 0.01
 license = Perl_5
 author  = Kent Fredric <kentnl@cpan.org>
 copyright_holder = Pedigree Consulting
 abstract = All you need to start with Spark::Form
 
-[BumpVersion]
 [AllFiles]
 [PruneCruft]
 
@@ -14,17 +13,22 @@ abstract = All you need to start with Spark::Form
 repository = git://github.com/kentfredric/Task-Spark-Form.git
 
 [License]
-[Readme]
+[ReadmeFromPod]
 
-;[InstallDirs]
+[InstallDirs]
 
 [PkgVersion]
 [PodPurler]
 
 [ModuleBuild]
+[MakeMaker]
 
-[Manifest]
 [ManifestSkip]
+[Manifest]
+
+[MetaTests]
+[PodTests]
+
 
 [NextRelease]
 
