--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Task-Spark-Form
 version = 0.02
 license = Perl_5
 author  = Kent Fredric <kentnl@cpan.org>
-copyright_holder = Pedigree Consulting
+copyright_holder = Kent Fredric
 abstract = All you need to start with Spark::Form
 
 [AllFiles]
