dep on the manual
update changes

--- a/dist.ini
+++ b/dist.ini
@@ -37,5 +37,5 @@ Spark::Form = 0.1
 SparkX::Form::BasicFields = 0.01
 SparkX::Form::BasicPrinters = 0.1
 SparkX::Form::BasicValidators = 0.01
-
+Spark::Form::Manual = 0.01
 
