--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,8 @@ repository = git://github.com/kentfredric/Task-Spark-Form.git
 [License]
 [ReadmeFromPod]
 
+[MetaProvides::Package]
+
 [InstallDirs]
 
 [PkgVersion]
