Various revbumping changes

--- a/dist.ini
+++ b/dist.ini
@@ -7,36 +7,39 @@ copyright_holder = Kent Fredric
 [AllFiles]
 [PruneCruft]
 
-[MetaYAML]
 [MetaResources]
 repository = git://github.com/kentfredric/Task-Spark-Form.git
 
 [License]
-[ReadmeFromPod]
-
-[MetaProvides::Package]
-
-[InstallDirs]
 
 [PkgVersion]
 [PodPurler]
 
+[MetaProvides::Package]
+
+[MetaYAML]
+[MetaJSON]
+
+[InstallDirs]
+
 [ModuleBuild]
 [MakeMaker]
+
+[ReadmeFromPod]
 
 [ManifestSkip]
 [Manifest]
 
+[CompileTests]
+[ExtraTests]
 [MetaTests]
 [PodTests]
 
 
 [NextRelease]
+[UploadToCPAN]
 
 [Prereq]
-Spark::Form = 0.1
-SparkX::Form::BasicFields = 0.01
-SparkX::Form::BasicPrinters = 0.1
-SparkX::Form::BasicValidators = 0.01
+Spark::Form = 0.2102
 Spark::Form::Manual = 0.01
 
