Dropping SF Manual dep till later

--- a/dist.ini
+++ b/dist.ini
@@ -41,5 +41,5 @@ repository = git://github.com/kentfredric/Task-Spark-Form.git
 
 [Prereq]
 Spark::Form = 0.2102
-Spark::Form::Manual = 0.01
+;Spark::Form::Manual = 0.01
 
