depend on Catalyst Plugin

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,17 @@
 name    = Task-Spark-Form
-version = 0.02
 license = Perl_5
 author  = Kent Fredric <kentnl@cpan.org>
 copyright_holder = Kent Fredric
+
+[AutoVersion::Relative]
+major  = 0
+minor  = 3
+year = 2009
+month = 06
+day = 30
+hour = 00
+time_zone = Pacific/Auckland
+
 
 [AllFiles]
 [PruneCruft]
@@ -41,5 +50,6 @@ repository = git://github.com/kentfredric/Task-Spark-Form.git
 
 [Prereq]
 Spark::Form = 0.2102
+Catalyst::Plugin::Spark::Form = 0.01000001
 ;Spark::Form::Manual = 0.01
 
