--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,7 @@
 abstract: 'All you need to start with Spark::Form'
 author:
   - 'Kent Fredric <kentnl@cpan.org>'
-generated_by: 'Dist::Zilla::Plugin::MetaYAML version 1.092450'
+generated_by: 'Dist::Zilla version 1.092930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -11,9 +11,10 @@ name: Task-Spark-Form
 provides:
   Task::Spark::Form:
     file: lib/Task/Spark/Form.pm
-    version: 0.02
+    version: 0.03012607
 requires:
+  Catalyst::Plugin::Spark::Form: 0.01000001
   Spark::Form: 0.2102
 resources:
   repository: git://github.com/kentfredric/Task-Spark-Form.git
-version: 0.02
+version: 0.03012607
