Upgrade build toolchain

--- a/dist.ini
+++ b/dist.ini
@@ -3,52 +3,17 @@ license = Perl_5
 author  = Kent Fredric <kentnl@cpan.org>
 copyright_holder = Kent Fredric
 
-[AutoVersion::Relative]
-major  = 0
-minor  = 3
-year = 2009
-month = 06
-day = 30
-hour = 00
-time_zone = Pacific/Auckland
+[@Author::KENTNL]
+version_major  = 0
+version_minor  = 3
+version_rel_year = 2009
+version_rel_month = 06
+version_rel_day = 30
+version_rel_hour = 00
+version_rel_time_zone = Pacific/Auckland
+twitter_hash_tags = #perl #cpan
 
-
-[AllFiles]
-[PruneCruft]
-
-[MetaResources]
-repository = git://github.com/kentfredric/Task-Spark-Form.git
-
-[License]
-
-[PkgVersion]
-[PodPurler]
-
-[MetaProvides::Package]
-
-[MetaYAML]
-[MetaJSON]
-
-[InstallDirs]
-
-[ModuleBuild]
-[MakeMaker]
-
-[ReadmeFromPod]
-
-[ManifestSkip]
-[Manifest]
-
-[CompileTests]
-[ExtraTests]
-[MetaTests]
-[PodTests]
-
-
-[NextRelease]
-[UploadToCPAN]
-
-[Prereq]
+[Prereqs]
 Spark::Form = 0.2102
 Catalyst::Plugin::Spark::Form = 0.01000001
 ;Spark::Form::Manual = 0.01
