Use git versions

--- a/dist.ini
+++ b/dist.ini
@@ -4,13 +4,8 @@ author  = Kent Fredric <kentnl@cpan.org>
 copyright_holder = Kent Fredric
 
 [@Author::KENTNL]
-version_major  = 0
-version_minor  = 3
-version_rel_year = 2009
-version_rel_month = 06
-version_rel_day = 30
-version_rel_hour = 00
-version_rel_time_zone = Pacific/Auckland
+:version = 1.0.8
+git_versions = 1
 twitter_hash_tags = #perl #cpan
 
 [Prereqs]
